syntax = "proto3";

package com.kairlec.log;

option java_package = "com.kairlec.log";
option java_outer_classname = "LogProto";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

message ThrowableDelegate{
  string class_name = 1;
  optional string message = 2;
  repeated bytes stack_trace = 3;
  optional ThrowableDelegate cause = 4;
  repeated ThrowableDelegate suppressed = 5;
}

message ArgLogResult{
  optional ThrowableDelegate throwable_delegate = 1;
  optional string format_message = 2;
  repeated ArgLogItem arg_messages = 3;
}

message ArgLogItem{
  optional string arg_message_item = 1;
}

message LazyLogResult{
  optional ThrowableDelegate throwable_delegate = 1;
  string message = 2;
}

message LogResult{
  oneof result{
    ArgLogResult arg_log_result = 1;
    LazyLogResult lazy_log_result = 2;
  }
  int32 level = 3;
}

message LogPersistence{
  repeated LogResult log_results = 1;
  int32 countBuffer = 2;
  google.protobuf.Timestamp timestamp = 3;
}